ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: app.local
    http:
      paths:
      - path: /api(/|$)(.*)   # Pour tous les endpoints de l'API
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /               # Pour le frontend et ses assets
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
